syntax = "proto3";

package average;


option java_package = "com.proto.average";
option java_multiple_files = true;

message AverageRequest {
    int32 numeral = 1;
}

message AverageResponse {
    double averageResult = 1;
}

service AverageService {
    rpc Average(stream AverageRequest) returns (AverageResponse) {};
}
